# FuckJob

./: .gitignore  Cross.toml  CrossLinux.Dockerfile  CrossWindows.Dockerfile  README.md  build.sh  index.html  package.json  pnpm-lock.yaml  vitest.config.ts
docs/: model-configuration.md  privacy-and-network.md
site/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: browser.rs  config.rs  credential.rs  error.rs  lib.rs  llm.rs  logger.rs  main.rs  verify.rs
src-tauri/src/command/: analysis.rs  base.rs  communicated_jobs.rs  config.rs  data.rs  job.rs  llm.rs  llm_provider.rs  mock_interview.rs  mod.rs  resume_templates.rs  user_resumes.rs
src-tauri/src/command/rpa/: mod.rs  run_flow.rs
src-tauri/src/dao/: analysis_dao.rs  chat_message_dao.rs  job_detail_dao.rs  mod.rs  model.rs  store.rs
src-tauri/src/llm/: openai_compatible.rs  service.rs  sse.rs  template.rs  types.rs
src-tauri/src/resource/: app_config.yaml  position.simple.json  site.json
src-tauri/src/resource/resumes/: data.json
src-tauri/src/rpa/: common.rs  mod.rs  run_flow.rs
src-tauri/src/rpa/boss/: README.md  mod.rs  model.rs
src-tauri/src/rpa/boss/handler/: login.rs  login_check.rs  mod.rs  position_say_hello.rs  reply_unread.rs  send_message.rs  send_resume.rs
src-tauri/src/rpa/liepin/: mod.rs
src-tauri/src/rpa/liepin/handler/: login.rs  login_check.rs  mod.rs  position_say_hello.rs  reply_unread.rs
src-tauri/src/storage/: atomic.rs  backup.rs  migration.rs  mod.rs
src-tauri/src/utils/: common.rs  conditions.rs  industry.rs  job_query.rs  mod.rs  position.rs  salary.rs  site.rs
(+63 files in other folders)
