[package]
name = "offer_flow"
version = "0.1.1"
description = "Local-first desktop job search automation and analysis tool"
authors = ["JWJW000"]
license = "Apache-2.0"
repository = "https://github.com/JWJW000/fuckJob_client"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "offer_flow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_drission = "0.2.5"
once_cell = "1.21.4"
urlencoding = "2.1.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.102"
serde_yaml = "0.9.34"
base64 = "0.22.1"
regex = "1.12.2"
kreuzberg = { version = "4.9.7", features = ["pdf", "bundled-pdfium"] }
tokio = { version = "1", features = ["time"] }
keyring = { version = "3.6.3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.13.4", features = [
    "json",
    "rustls",
], default-features = false }
tempfile = "3.27.0"
rig-core = "0.40.0"
futures = "0.3.30"

[dev-dependencies]
